--- a/app/views/orderDesign.html
+++ b/app/views/orderDesign.html
@@ -75,7 +75,7 @@
             <span class="payTotalCount">金额：{{orderInfo.totalPay}}</span>
             <div class="royalButtonWrapper payButton">
                 <div class="btn btn-warning royalButton">
-                    <span ng-click="onOrderBtnClicked()">国库拨款</span>
+                    <span ng-click="onPayOrderBtnClicked()">国库拨款</span>
                 </div>
             </div>
         </div>
