--- a/app/views/payOrder.html
+++ b/app/views/payOrder.html
@@ -2,5 +2,8 @@
     Pay Order: {{designCount}}
 </div>
 <div>
+    各位元老，请贡献1元给我们的“孩子”吧～～～：）
+</div>
+<div>
     <label class="btn btn-warning" ng-click="onPayClicked()">pay</label>
 </div>
