--- a/app/app.css
+++ b/app/app.css
@@ -97,17 +97,15 @@
 }
 
 .createDetailView .personalGalleryRow {
-  margin-left: 80px;
-  margin-right: 80px;
   width: auto;
-  margin-left: 80px;
-  margin-right: 80px;
+  margin-left: 50px;
+  margin-right: 50px;
   position: fixed;
   top: 0px;
   left: 0px;
   right: 0px;
   bottom: 80px;
-  background-color: rgba(207, 176, 96, 0.5);
+  background-color: rgba(207, 176, 96, 0.7);
   z-index: 1000;
 }
 
@@ -611,6 +609,10 @@
   font-weight: bold;
 }
 
+.uploadedImageArea .myArtifactsCarouselDiv {
+  height: 100%;
+}
+
 .uploadedImageArea .myArtifactsCarousel {
   height: 70%;
   height: calc(100% - 50px);
@@ -623,7 +625,11 @@
 }
 
 .uploadedImageArea .myArtifactsCarousel li img {
-  width: 80%;
+  width: 45%;
+}
+
+.uploadedImageArea .myArtifactsGroupBottom {
+  margin-top: 5px;
 }
 
 .uploadedImageArea .myArtifactsCarousel .rn-carousel-controls > span {
