--- a/app/views/personalGallery.html
+++ b/app/views/personalGallery.html
@@ -12,13 +12,29 @@
             <div class="titleDiv">
                 <span class="titleSpan">已上传图像</span>
             </div>
-            <ul rn-carousel class="image myArtifactsCarousel" rn-carousel-transition="fadeAndSlide" rn-carousel-controls rn-carousel-index="aMyArtifactCarouselIndex">
-                <li ng-repeat="oImage in aMyArtifact">
-                    <img src="data:image/png;base64,{{oImage.largeImage64}}" style="margin:auto;" 
-                    ng-click="onArtifactSelected(oImage)">
-                </li>
-            </ul>
-            <div rn-carousel-indicators ng-if="aMyArtifact.length > 1" slides="aMyArtifact" rn-carousel-index="aMyArtifactCarouselIndex" class="carouselIndicator"></div>
+            <div class="myArtifactsCarouselDiv" ng-if="aMyArtifact.length > 0">
+                <ul rn-carousel class="image myArtifactsCarousel" rn-carousel-transition="fadeAndSlide" rn-carousel-controls 
+                rn-carousel-index="aMyArtifactCarouselIndex">
+                    <li ng-repeat="oImageGroup in aMyArtifact">
+                        <div class="myArtifactsGroupTop">
+                            <img src="{{oImageGroup[0].largeImage64}}" style="margin:auto;" 
+                            ng-click="onArtifactSelected(oImageGroup[0])">
+                            <img src="{{oImageGroup[1].largeImage64}}" style="margin:auto;" 
+                            ng-click="onArtifactSelected(oImageGroup[1])">
+                        </div>
+                        <div class="myArtifactsGroupBottom">
+                            <img src="{{oImageGroup[2].largeImage64}}" style="margin:auto;" 
+                            ng-click="onArtifactSelected(oImageGroup[2])">
+                            <img src="{{oImageGroup[3].largeImage64}}" style="margin:auto;" 
+                            ng-click="onArtifactSelected(oImageGroup[3])">
+                        </div>
+                        <!--img src="{{oImage.largeImage64}}" style="margin:auto;" 
+                        ng-click="onArtifactSelected(oImage)"-->
+                    </li>
+                </ul>
+                <div rn-carousel-indicators ng-if="aMyArtifact.length > 1" slides="aMyArtifact" 
+                rn-carousel-index="aMyArtifactCarouselIndex" class="carouselIndicator"></div>
+            </div>
         </div>
     </div>
 </div>
