--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -9,6 +9,7 @@
         <div ui-view="personalGallery"></div>
         <div ui-view="saveDetail"></div>
         <div ui-view="orderDesign"></div>
+        <div ui-view="addressDetail"></div>
 
         <div class="selectedArtifactArea" ng-if="aSelectedArtifact.length > 0">
             <div class="availableArea" style="{{htmlItemStyle.availableArea.styleStr}}"></div>
