--- a/app/views/orderDesign.html
+++ b/app/views/orderDesign.html
@@ -6,7 +6,7 @@
             <span>上海市黄浦区1001号</span>
         </div>
         <div class="editAddress">
-            <span class="glyphicon glyphicon-triangle-bottom"></span>
+            <span class="glyphicon glyphicon-triangle-bottom" ng-click="onEditAddressDetailClicked()"></span>
         </div>
     </div>
     <div class="defaultOrderQuantityRow">
