--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -10,6 +10,8 @@
         <div ui-view="saveDetail"></div>
         <div ui-view="orderDesign"></div>
         <div ui-view="addressDetail"></div>
+        <div ui-view="paySourceList"></div>
+        <div ui-view="payCouponList"></div>
 
         <div class="selectedArtifactArea" ng-if="aSelectedArtifact.length > 0">
             <div class="availableArea" style="{{htmlItemStyle.availableArea.styleStr}}"></div>
