--- a/app/views/payOrder.html
+++ b/app/views/payOrder.html
@@ -5,5 +5,5 @@
     各位元老，请贡献1元给我们的“孩子”吧～～～：）
 </div>
 <div>
-    <label class="btn btn-warning" ng-click="onPayClicked()">pay</label>
+    <label class="btn btn-warning" ng-click="onPayClicked()">支付</label>
 </div>
