--- a/app/views/createDesign.html
+++ b/app/views/createDesign.html
@@ -76,4 +76,10 @@
             </div>
         </div-->
     </div>
+    <div class="busyView" style="{{busyViewStyle}}">
+        <div>
+            <span>朕不急</span>
+        </div>
+        <img src="img/cloud.png" class="busyViewCloud">
+    </div>
 </div>
