--- a/app/views/paySourceList.html
+++ b/app/views/paySourceList.html
@@ -9,4 +9,8 @@
             <span ng-click="onPayViaAlipayClicked()">支付宝支付</span>
         </div>
     </div>
+    <div class="naviBtnRow">
+        <span class="glyphicon glyphicon-chevron-left" ng-click="onBackFromPaySourceListClicked()"></span>
+        <span class="glyphicon glyphicon-send"></span>
+    </div>
 </div>
