--- a/app/views/createDesign.html
+++ b/app/views/createDesign.html
@@ -1,7 +1,7 @@
-<div class='row createDesignView' ng-controller="CreateDesignCtrl">
+<div class='createDesignView' ng-controller="CreateDesignCtrl">
     <div ui-view="createDetail">
-        <div class='row'>
-            <div class="col-xs-12">
+        <div>
+            <div>
                 <img class='createDesignBgImg' src='img/test.svg'></img>
             </div>
         </div>
