--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -1,7 +1,7 @@
-<div class='row createDetailView' ontouchmove="event.preventDefault()">
+<div class='createDetailView' ontouchmove="event.preventDefault()">
     <!--div ui-view="saveDetail"-->
-        <div class='row'>
-            <div class="col-xs-12">
+        <div>
+            <div>
                 <img class='createDesignBgImg' src='img/female_white.png'></img>
             </div>
         </div>
