--- a/app/app.css
+++ b/app/app.css
@@ -934,6 +934,35 @@
   margin-right: 5px;
 }
 
+.myDesignsView {
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  right: 0px;
+  left: 0px;
+}
+
+.myDesignsView .topLeftCloud {
+  position: absolute;
+  width: 40%;
+  top: 21px;
+  left: -5%;
+}
+
+.myDesignsView .bottomCenterCloud {
+  position: absolute;
+  width: 50%;
+  bottom: -10px;
+  left: 38%;
+}
+
+.myDesignsView .rightCenterCloud {
+  position: absolute;
+  width: 38%;
+  right: -10%;
+  bottom: 30%;
+}
+
 .myDesignsView .myDesignListHeader {
   width: 100%;
   height: 40px;
@@ -942,7 +971,7 @@
 }
 
 .myDesignsView .myDesignListFooter {
-  height: 20px;
+  height: 30px;
 }
 
 .myDesignsView .myDesignListHeader > span {
@@ -955,52 +984,163 @@
 }
 
 .myDesignsView .myDesignListContent {
-  height: calc(100% - 60px);
-  height: -webkit-calc(100% - 60px);
-  height: -moz-calc(100% - 60px);
-  height: -o-calc(100% - 60px);
+  position: relative;
+  height: calc(100% - 70px);
+  height: -webkit-calc(100% - 70px);
+  height: -moz-calc(100% - 70px);
+  height: -o-calc(100% - 70px);
 }
 
 .myDesignsView .myDesignListContent > .myDesignListLeft,
 .myDesignsView .myDesignListContent > .myDesignListRight,
 .myDesignsView .myDesignListContent > .myDesignListCenter {
-  display: inline-block;
+  position: absolute;
 }
 
-.myDesignsView .myDesignListContent > .myDesignListLeft,
+.myDesignsView .myDesignListContent > .myDesignListLeft {
+  width: 35px;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+}
+
 .myDesignsView .myDesignListContent > .myDesignListRight {
-  width: 15%;
-  height: 100%;
+  width: 35px;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
 }
 
 .myDesignsView .myDesignListContent > .myDesignListCenter {
-  width: 70%;
+  top: 0px;
+  left: 30px;
+  right: 30px;
+  bottom: 0px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
-.myDesignsView .myDesignListContent > .myDesignListLeft > div {
-  margin-right: 8px;
-  border-top: 2px solid rgb(176, 137, 67);
-  border-bottom: 2px solid rgb(176, 137, 67);
-  border-right: 2px solid rgb(176, 137, 67);
+.myDesignListLeft > .topAxis,
+.myDesignListRight > .topAxis {
+  margin-top: 50px;
+  height: 16px;
+  position: relative;
 }
 
-.myDesignsView .myDesignListContent > .myDesignListRight > div {
-  margin-left: 8px;
-  border-top: 2px solid rgb(176, 137, 67);
-  border-bottom: 2px solid rgb(176, 137, 67);
-  border-left: 2px solid rgb(176, 137, 67);
+.myDesignListLeft .bottomAxis,
+.myDesignListRight .bottomAxis {
+  height: 16px;
+  position: relative;
+}
+
+.myDesignListLeft > .centerAxis {
+  height: 70%;
+  border: 2px solid rgb(176, 137, 67);
+  margin-right: 13px;
+}
+
+.myDesignListLeft > .topAxis > .topAxisCenter,
+.myDesignListLeft > .bottomAxis > .bottomAxisCenter {
+  height: 16px;
+  width: 22px;
+  border: 2px solid rgb(176, 137, 67);
+}
+
+.myDesignListLeft > .topAxis > .topAxisRight,
+.myDesignListLeft > .bottomAxis > .bottomAxisRight {
+  height: 10px;
+  width: 10px;
+  background-color: rgb(176, 137, 67);
+  left: 22px;
+  top: 4px;
+  position: absolute;
+}
+
+.myDesignListRight > .centerAxis {
+  height: 70%;
+  border: 2px solid rgb(176, 137, 67);
+  margin-left: 13px;
+}
+
+.myDesignListRight > .topAxis > .topAxisLeft,
+.myDesignListRight > .bottomAxis > .bottomAxisLeft {
+  height: 10px;
+  width: 10px;
+  background-color: rgb(176, 137, 67);
+  position: absolute;
+  top: 4px;
+  left: 4px;
+}
+
+.myDesignListRight > .topAxis > .topAxisCenter,
+.myDesignListRight > .bottomAxis > .bottomAxisCenter {
+  height: 16px;
+  width: 22px;
+  border: 2px solid rgb(176, 137, 67);
+  left: 13px;
+  top: 0px;
+  position: absolute;
+}
+
+.myDesignListCenter > .topAxis {
+  margin-top: 30px;
+  height: 16px;
+  position: relative;
+}
+
+.myDesignListCenter > .topAxis > .topAxisCenter,
+.myDesignListCenter > .bottomAxis > .bottomAxisCenter {
+  height: 100%;
+  width: 100%;
+  border: 2px solid rgb(176, 137, 67);
+}
+
+.myDesignListCenter > .topAxis > .topAxisLeft,
+.myDesignListCenter > .topAxis > .topAxisRight,
+.myDesignListCenter > .bottomAxis > .bottomAxisLeft,
+.myDesignListCenter > .bottomAxis > .bottomAxisRight {
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  top: 4px;
+  background-color: rgb(176, 137, 67);
+}
+
+.myDesignListCenter > .topAxis > .topAxisLeft,
+.myDesignListCenter > .bottomAxis > .bottomAxisLeft {
+  left: -10px;
+}
+
+.myDesignListCenter > .topAxis > .topAxisRight,
+.myDesignListCenter > .bottomAxis > .bottomAxisRight {
+  right: -10px;
+}
+
+.myDesignListCenter .bottomAxis {
+  height: 16px;
+  position: relative;
+}
+
+.myDesignListCenter > .centerContent {
+  height: 85%;
+  border: 2px solid rgb(176, 137, 67);
 }
 
 .myDesignListCarousel {
-  height: 300px;
+  height: 100%;
 }
 
 .myDesignListCarousel .designItem {
-  text-align: center;
+  height: 100%;
+  position: relative;
 }
 
 .myDesignListCarousel .designItem > img {
-  width: 70%;
+  position: absolute;
+}
+
+.myDesignListCarousel .designItem > img.designBackgroundImg {
+  width: 100%;
 }
 
 .myDesignListRowImg {
