--- a/app/views/myDesigns.html
+++ b/app/views/myDesigns.html
@@ -1,90 +1,117 @@
-<div class='row myDesignsView'>
-    <div class="col-xs-12">
-        <div ng-controller="MyDesignsListCtrl">
-            <!--carousel interval="myInterval">
-                <slide ng-repeat="oDesign in aMyDesigns" active="oDesign.active">
-                    <img ng-src="img/test.svg" style="margin:auto;">
-                    <div class="carousel-caption">
-                        <h4>Slide {{$index}}</h4>
-                        <p>{{oDesign.desc}}</p>
-                    </div>
-                </slide>
-            </carousel-->
-            <div class="myDesignListHeader">
-                <span>朕设计的</span>
-                <span>朕喜欢的</span>
+<div class='myDesignsView' ng-controller="MyDesignsListCtrl">
+    <!--carousel interval="myInterval">
+        <slide ng-repeat="oDesign in aMyDesigns" active="oDesign.active">
+            <img ng-src="img/test.svg" style="margin:auto;">
+            <div class="carousel-caption">
+                <h4>Slide {{$index}}</h4>
+                <p>{{oDesign.desc}}</p>
             </div>
+        </slide>
+    </carousel-->
+    <img src="img/cloud.png" class="bottomCenterCloud">
 
-            <div class="myDesignListContent">
-                <div class="myDesignListLeft">
-                    <div>
-                        
-                    </div>
-                </div>
-                <div class="myDesignListCenter">
-                    <ul rn-carousel class="image myDesignListCarousel" rn-carousel-transition="fadeAndSlide">
-                        <li ng-repeat="oDesign in aMyDesigns">
-                            <div class="designItem">
-                                <img ng-src="{{oDesign.previewImage64}}" style="margin:auto;">
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="myDesignListRight">
-                    <div>
-                        
-                    </div>
-                </div>
+    <div class="myDesignListHeader">
+        <span>朕设计的</span>
+        <span>朕喜欢的</span>
+    </div>
+
+    <img src="img/cloud.png" class="topLeftCloud">
+
+    <div class="myDesignListContent">
+        <div class="myDesignListLeft">
+            <div class="topAxis">
+                <div class="topAxisCenter"></div>
+                <div class="topAxisRight"></div>
             </div>
-
-            <div class="myDesignListFooter">
-                
+            <div class="centerAxis"></div>
+            <div class="bottomAxis">
+                <div class="bottomAxisCenter"></div>
+                <div class="bottomAxisRight"></div>
             </div>
-
-            <!--div>
-                <div class='row myDesignListTitleRow'>
-                    <div class="col-xs-3">Thumbnail</div>
-                    <div class="col-xs-9">
-                        <div class='row'>
-                            <div class="col-xs-3">Description</div>
-                            <div class="col-xs-2">creatorId</div>
-                            <div class="col-xs-2">ppp</div>
-                            <div class="col-xs-2">access</div>
+        </div>
+        <div class="myDesignListCenter">
+            <div class="topAxis">
+                <div class="topAxisLeft"></div>
+                <div class="topAxisCenter"></div>
+                <div class="topAxisRight"></div>
+            </div>
+            <div class="centerContent">
+                <ul rn-carousel class="image myDesignListCarousel" rn-carousel-transition="fadeAndSlide">
+                    <li ng-repeat="oDesign in aMyDesigns">
+                        <div class="designItem">
+                            <img src="img/female_white.png" class="designBackgroundImg">
+                            <img ng-src="{{oDesign.previewImage64}}" style="{{positionInfoStyleValue}}">
                         </div>
-                    </div>
-                </div>
-                <div ng-repeat="oDesign in aMyDesigns">
-                    <div class='row'>
-                        <div class="col-xs-3">
-                            <img ng-src="img/create_bk.png" class="myDesignListRowImg" ng-click="onDesignItemClicked(oDesign)">
-                        </div>
-                        <div class="col-xs-9">
-                            <div class='row'>
-                                <div class="col-xs-3">{{oDesign.desc}}</div>
-                                <div class="col-xs-2">{{oDesign.creatorId}}</div>
-                                <div class="col-xs-2">{{oDesign.price}}</div>
-                                <div class="col-xs-2">{{oDesign.access}}</div>
-                                <div class="col-xs-2">
-                                    <div class="btn-group" dropdown>
-                                        <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle>
-                                            Edit <span class="caret"></span>
-                                        </button>
-                                        <ul class="dropdown-menu" role="menu">
-                                            <li ng-repeat="oOption in constant.DESIGN_ITEM_OPT">
-                                                <a ng-click="onDesignItemOptionClicked(oOption, oDesign)">{{oOption}}</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div-->
+                    </li>
+                </ul>
+            </div>
+            <div class="bottomAxis">
+                <div class="bottomAxisLeft"></div>
+                <div class="bottomAxisCenter"></div>
+                <div class="bottomAxisRight"></div>
+            </div>
+        </div>
+        <div class="myDesignListRight">
+            <div class="topAxis">
+                <div class="topAxisLeft"></div>
+                <div class="topAxisCenter"></div>
+            </div>
+            <div class="centerAxis"></div>
+            <div class="bottomAxis">
+                <div class="bottomAxisLeft"></div>
+                <div class="bottomAxisCenter"></div>
+            </div>
         </div>
     </div>
+
+    <div class="myDesignListFooter">
+        
+    </div>
+
+    <img src="img/cloud.png" class="rightCenterCloud">
+
+    <!--div>
+        <div class='row myDesignListTitleRow'>
+            <div class="col-xs-3">Thumbnail</div>
+            <div class="col-xs-9">
+                <div class='row'>
+                    <div class="col-xs-3">Description</div>
+                    <div class="col-xs-2">creatorId</div>
+                    <div class="col-xs-2">ppp</div>
+                    <div class="col-xs-2">access</div>
+                </div>
+            </div>
+        </div>
+        <div ng-repeat="oDesign in aMyDesigns">
+            <div class='row'>
+                <div class="col-xs-3">
+                    <img ng-src="img/create_bk.png" class="myDesignListRowImg" ng-click="onDesignItemClicked(oDesign)">
+                </div>
+                <div class="col-xs-9">
+                    <div class='row'>
+                        <div class="col-xs-3">{{oDesign.desc}}</div>
+                        <div class="col-xs-2">{{oDesign.creatorId}}</div>
+                        <div class="col-xs-2">{{oDesign.price}}</div>
+                        <div class="col-xs-2">{{oDesign.access}}</div>
+                        <div class="col-xs-2">
+                            <div class="btn-group" dropdown>
+                                <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle>
+                                    Edit <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li ng-repeat="oOption in constant.DESIGN_ITEM_OPT">
+                                        <a ng-click="onDesignItemOptionClicked(oOption, oDesign)">{{oOption}}</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div-->
 </div>
-<div class="row">
+<!--div class="row">
     <div class="col-xs-4">
         <a ui-sref="orderList">Search</a>
     </div>
@@ -92,4 +119,4 @@
     <div class="col-xs-4">
         <a ui-sref="createDesign">新设计</a>
     </div>
-</div>
+</div-->
