--- a/app/app.css
+++ b/app/app.css
@@ -1,4 +1,8 @@
 /* app css stylesheet */
+body .createDesignView {
+  color: rgb(176, 137, 67);
+}
+
 .container-fluid {
   padding-left: 0px;
   padding-right: 0px;
@@ -129,6 +133,38 @@
   margin-left: 0px;
 }
 
+.createDesignView .pleaseDesign > div {
+  width: auto;
+  margin-left: 44%;
+  margin-right: 44%;
+  text-align: center;
+  height: 100%;
+  padding-top: 10%;
+  background-color: rgb(176, 137, 67);
+  color: white;
+}
+
+.createDesignView .pleaseDesign > div > span {
+  font-size: 25px;
+}
+
+.createDesignView .genderButtonRow > div img {
+  width: 80%;
+}
+
+.createDesignView .genderButtonRow > div span {
+  font-size: 25px;
+  border-top: 3px solid rgb(176, 137, 67);
+  border-bottom: 3px solid rgb(176, 137, 67);
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.createDesignView .genderButtonRow > div > div {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
 .createDesignView > div:first-child > div:first-child,
 .createDetailView > div:first-child > div:first-child {
   position: fixed;
@@ -175,7 +211,34 @@
 .createDetailView .toolRow {
   position: fixed;
   bottom: 0px;
-  height: 35px;
+  height: 40px;
+  width: 100%;
+}
+
+.createDetailView .toolRow > div {
+  width: 19%;
+  display: inline-block;
+  text-align: center;
+}
+
+.createDetailView .toolRow > div > span {
+  font-size: 22px;
+  color: rgb(176, 137, 67);
+}
+
+.createDetailView .toolRow > div:nth-child(2) > span,
+.createDetailView .toolRow > div:nth-child(3) > span,
+.createDetailView .toolRow > div:nth-child(4) > span {
+  border: 2px solid rgb(176, 137, 67);
+  border-radius: 20px;
+  padding: 4px;
+}
+
+.createDetailView .toolRow > div:nth-child(2) > span:active,
+.createDetailView .toolRow > div:nth-child(3) > span:active,
+.createDetailView .toolRow > div:nth-child(4) > span:active {
+  color: white;
+  background-color: rgb(176, 137, 67);
 }
 
 .createDetailView .personalGalleryRow {
