--- a/app/views/createDesign.html
+++ b/app/views/createDesign.html
@@ -1,22 +1,31 @@
 <div class='createDesignView' ng-controller="CreateDesignCtrl">
-    <div ui-view="createDetail">
-        <div>
+    <div ui-view="createDetail" class="createDesign">
+        <!--div>
             <div>
                 <img class='createDesignBgImg' src='img/test.svg'></img>
             </div>
-        </div>
+        </div-->
         <!--div class='row'>
             <div class="col-xs-12">
                 <button type="button" class="btn btn-default leftBtn glyphicon glyphicon-refresh"></button>
                 <button class="btn btn-default rightBtn glyphicon glyphicon-ok" ng-click="createDesign()"></button>
             </div>
         </div-->
+        <div class="pleaseDesign">
+            <div><span>恭请设计</span></div>
+        </div>
         <div class='row genderButtonRow'>
             <div class="col-xs-6">
-                <button class="btn btn-default btn-lg" ng-click="onGenderSelected()">T</button>
+                <div>
+                    <span ng-click="onMaleSelected()">男</span>
+                </div>
+                <div><img src="img/genderMale.png"></div>
             </div>
             <div class="col-xs-6">
-                <button class="btn btn-default btn-lg" ng-click="onGenderSelected()">T</button>
+                <div>
+                    <span ng-click="onFemalerSelected()">女</span>
+                </div>
+                <div><img src="img/genderFemale.png"></div>
             </div>
         </div>
         <!--div class='row newDesignInfoArea'>
