--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -55,26 +55,24 @@
         <div class="previewDesignBtn" style="{{htmlItemStyle.designToolArea.styleStr}}" ng-click="onPreviewDesignBtnClicked()">
             <span>好</span>
         </div>
-        <div class='row toolRow' style="{{htmlItemStyle.designToolArea.styleStr}}">
-            <div class="col-xs-12">
-                <div class="col-xs-2">
-                    <button type="button" class="btn btn-default" ng-click="onCreateDesignBackClicked()">Back</button>
-                </div>
-                <div class="col-xs-2">
-                    <button type="button" class="btn btn-default">hot</button>
-                </div>
-                <div class="col-xs-2">
-                    <button type="button" class="btn btn-default" ng-click="onOpenMyGallery()">mine</button>
-                </div>
-                <div class="col-xs-2">
-                    <button type="button" class="btn btn-default" ng-click="getFileContent()">text</button>
-                </div>
-                <div class="col-xs-2">
-                    <button type="button" class="btn btn-default">QR</button>
-                </div>
-                <div class="col-xs-2">
-                    <button class="btn btn-default rightBtn glyphicon glyphicon-ok" ng-click="onCreateDesignClicked()"></button>
-                </div>
+        <div class='toolRow' style="{{htmlItemStyle.designToolArea.styleStr}}">
+            <div class="backButton">
+                <span class="glyphicon glyphicon-chevron-left" ng-click="onCreateDesignBackClicked()"></span>
+            </div>
+            <div class="highlightButton">
+                <span class="glyphicon glyphicon-star"></span>
+            </div>
+            <div class="cameraButton">
+                <span class="glyphicon glyphicon-camera" ng-click="onOpenMyGallery()"></span>
+            </div>
+            <div class="textButton">
+                <span class="glyphicon glyphicon-text-size" ng-click="getFileContent()"></span>
+            </div>
+            <!--div class="col-xs-2">
+                <button type="button" class="btn btn-default">QR</button>
+            </div-->
+            <div class="createButton">
+                <span class="rightBtn glyphicon glyphicon-ok" ng-click="onCreateDesignClicked()"></span>
             </div>
         </div>
 
